force-app/main/default/objects/SchindlerOcrStaging__c/SchindlerOcrStaging__c.object-meta.xml
<CustomObject>
    <description>Staging of OCR response from https://api.cloudmersive.com/ocr/pdf/to/lines-with-location</description>
    <label>Schindler Ocr Staging</label>
    <nameField>
        <label>Schindler Ocr Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schindler Ocr Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>