force-app/main/default/objects/SchindlerOcrStaging__c/fields/LineText__c.field-meta.xml
<CustomField>
    <fullName>LineText__c</fullName>
    <label>LineText</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>