force-app/main/default/objects/SchindlerOcrStaging__c/fields/PageNumber__c.field-meta.xml
<CustomField>
    <fullName>PageNumber__c</fullName>
    <label>PageNumber</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>