force-app/main/default/objects/SchindlerOcrStaging__c/fields/WordText__c.field-meta.xml
<CustomField>
    <fullName>WordText__c</fullName>
    <label>WordText</label>
    <length>200</length>
    <type>Text</type>
</CustomField>