force-app/main/default/objects/SchindlerOcrStaging__c/fields/XLeft__c.field-meta.xml
<CustomField>
    <fullName>XLeft__c</fullName>
    <label>XLeft</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>