force-app/main/default/objects/SchindlerOcrStaging__c/fields/YTop__c.field-meta.xml
<CustomField>
    <fullName>YTop__c</fullName>
    <label>YTop</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>