force-app/main/default/objects/SchindlerOcrStaging__c/fields/YTopModified__c.field-meta.xml
<CustomField>
    <fullName>YTopModified__c</fullName>
    <label>YTopModified</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>